force-app/main/default/objects/Asset/fields/Call_Rate_Annual__c.field-meta.xml
<CustomField>
    <fullName>Call_Rate_Annual__c</fullName>
    <label>Call Rate (per yr)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Annualized service-call frequency for this asset (calls in trailing 12 months).</description>
    <inlineHelpText>Annualized service-call frequency for this asset (calls in trailing 12 months).</inlineHelpText>
</CustomField>