force-app/main/default/objects/Asset/fields/Fix_Right_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Fix_Right_First_Time__c</fullName>
    <label>Fix Right First Time %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Percent of service calls with no repeat visit for the same asset within 30 days.</description>
    <inlineHelpText>Percent of service calls with no repeat visit for the same asset within 30 days.</inlineHelpText>
</CustomField>