force-app/main/default/objects/Asset/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
    <description>Date of the most recent completed service call.</description>
    <inlineHelpText>Date of the most recent completed service call.</inlineHelpText>
</CustomField>