force-app/main/default/objects/Asset/fields/Mean_Time_To_Repair_Days__c.field-meta.xml
<CustomField>
    <fullName>Mean_Time_To_Repair_Days__c</fullName>
    <label>Mean Time To Repair (days)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>1</scale>
    <description>Average days from issue reported to service completed.</description>
    <inlineHelpText>Average days from issue reported to service completed.</inlineHelpText>
</CustomField>