force-app/main/default/objects/Asset/fields/Open_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Open_Work_Orders__c</fullName>
    <label>Open Work Orders</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Currently open (not completed/closed/canceled) work orders for this asset.</description>
    <inlineHelpText>Currently open (not completed/closed/canceled) work orders for this asset.</inlineHelpText>
</CustomField>