force-app/main/default/objects/Asset/fields/Repeat_Visits_12mo__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Visits_12mo__c</fullName>
    <label>Repeat Visits (12mo)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Service calls in the last 12mo that were a repeat within 30 days of a prior call.</description>
    <inlineHelpText>Service calls in the last 12mo that were a repeat within 30 days of a prior call.</inlineHelpText>
</CustomField>