force-app/main/default/objects/Asset/fields/Service_Calls_12mo__c.field-meta.xml
<CustomField>
    <fullName>Service_Calls_12mo__c</fullName>
    <label>Service Calls (12mo)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Completed service calls in the trailing 365 days.</description>
    <inlineHelpText>Completed service calls in the trailing 365 days.</inlineHelpText>
</CustomField>