force-app/main/default/objects/Asset/fields/Service_Metrics_Updated__c.field-meta.xml
<CustomField>
    <fullName>Service_Metrics_Updated__c</fullName>
    <label>Service Metrics Updated</label>
    <type>DateTime</type>
    <description>When the service metrics were last recalculated.</description>
    <inlineHelpText>When the service metrics were last recalculated.</inlineHelpText>
</CustomField>