force-app/main/default/objects/Asset/fields/Total_Service_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Calls__c</fullName>
    <label>Total Service Calls</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Lifetime count of completed service calls (Work Orders) for this asset.</description>
    <inlineHelpText>Lifetime count of completed service calls (Work Orders) for this asset.</inlineHelpText>
</CustomField>