force-app/main/default/objects/Asset/listViews/Renewals_Due_Soon.listView-meta.xml
<ListView>
    <fullName>Renewals_Due_Soon</fullName>
    <label>Renewals Due Soon (60 days)</label>
    <filterScope>Everything</filterScope>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Installed</value>
    </filters>
    <filters>
        <field>ASSET.NAME</field>
        <operation>contains</operation>
        <value>Subscription</value>
    </filters>
    <filters>
        <field>ASSET.USAGE_END_DATE</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
</ListView>